Add comented out lines for bootstarp css and js

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,13 +1,14 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <!-- <link href="static/bootstrap-5.3.3/css/bootstrap.min.css" rel="stylesheet"> -->
+  <title>Document</title>
 </head>
 <body>
   Hello World
+  <!-- <script src="static/bootstrap-5.3.3/js/bootstrap.min.js"></script> -->
 </body>
 </html>
