--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,7 +8,8 @@
   <title>Document</title>
 </head>
 <body>
-  Hello World
+  <h1>Hello World - Spring Boot Setup</h1>
+  <h2>IST 412 - Summer 2025</h2>
   <!-- <script src="static/bootstrap-5.3.3/js/bootstrap.min.js"></script> -->
 </body>
 </html>
