--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <!-- <link href="static/bootstrap-5.3.3/css/bootstrap.min.css" rel="stylesheet"> -->
-  <title>Document</title>
+  <title>GameFlix Spring Boot Project</title>
 </head>
 <body>
   <h1>Hello World - Spring Boot Setup</h1>
